# oi

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  demo.tape  pyproject.toml  todo.txt
.github/workflows/: ci.yml  release.yml
src/llm_cli/: app.py  cli.py  constants.py  llm_types.py  model_config.py  models.yaml  models_template.yaml  prompts.py  registry.py  renderers.py  response_handler.py
src/llm_cli/config/: loaders.py  settings.py  user_config.py
src/llm_cli/core/: chat_manager.py  chat_repository.py  client.py  message_utils.py  session.py
src/llm_cli/prompts/: prompt_concise.txt
src/llm_cli/ui/: chat_selector.py  image_paste.py  input_handler.py  labels.py
src/oi/: app.py  cli.py  constants.py  exceptions.py  llm_types.py  local_commands.py  main.py  models.yaml  models_template.yaml  prompts.py  registry.py  renderers.py  response_handler.py
src/oi/config/: loaders.py  settings.py
src/oi/core/: chat_manager.py  chat_repository.py  client.py  codex_auth.py  session.py  smart_title.py  stats.py
src/oi/docs/: models.md
src/oi/prompts/: prompt_general.txt
src/oi/ui/: chat_selector.py  image_paste.py  input_handler.py  labels.py  stats_view.py  transcript.py
tests/: test_main.py
tests/unit/: test_app.py  test_cli.py  test_registry.py  test_renderers.py
tests/unit/config/: test_loaders.py  test_model_config.py  test_settings.py
tests/unit/core/: test_chat_factory.py  test_client.py  test_codex_auth.py  test_message_utils.py  test_session.py  test_smart_title.py  test_stats.py
tests/unit/ui/: test_chat_selector.py  test_input_handler.py
