[project]
name = "oi-cli"
version = "0.1.0"
description = "Command-line chat interface for multiple LLM providers, with streaming output, persistent chats, and YAML-based model aliases."
readme = "README.md"
authors = [
    { name = "Dan Sclearov", email = "dansclearov@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.2",
    "colored>=2.3.0",
    "openai>=1.84.0",
    "platformdirs>=4.3.8",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "send2trash>=1.8.3",
    "prompt-toolkit>=3.0.51",
    "pydantic-ai>=1.100.0,<2.0",
]


[project.scripts]
oi = "oi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oi"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
